conformance/tests/tcproute-valid-invalid-listeners.yaml
apiVersion: v1
kind: Service
metadata:
  name: tcp-echo-mixed-listeners
  namespace: gateway-conformance-infra
  labels:
    app: tcp-echo-mixed-listeners
spec:
  selector:
    app: tcp-echo-mixed-listeners
  ports:
    - name: tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tcp-echo-mixed-listeners
  namespace: gateway-conformance-infra
  labels:
    app: tcp-echo-mixed-listeners
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tcp-echo-mixed-listeners
  template:
    metadata:
      labels:
        app: tcp-echo-mixed-listeners
    spec:
      containers:
        - name: tcp-echo
          image: registry.k8s.io/gateway-api/echo-basic:v1.5.1
          imagePullPolicy: IfNotPresent
          env:
            - name: TCP_ECHO_SERVER
              value: "1"
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: tcp-echo-mixed-listeners
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tcp-udp-listeners-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: tcp
      protocol: TCP
      port: 9300
      allowedRoutes:
        kinds:
          - kind: TCPRoute
    - name: udp
      protocol: UDP
      port: 5300
      allowedRoutes:
        kinds:
          - kind: UDPRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tcp-route-on-mixed-listener-gateway
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tcp-udp-listeners-gateway
      sectionName: tcp
  rules:
    - backendRefs:
        - name: tcp-echo-mixed-listeners
          port: 3000
